--- a/HDTPharmacy/src/main/resources/static/admin/css/custom.css
+++ b/HDTPharmacy/src/main/resources/static/admin/css/custom.css
@@ -9,18 +9,17 @@
 }
 
 /* Input image file */
-.img-thumbnail:hover{
+.img-thumbnail:hover {
 	cursor: pointer;
 }
 
-.input-image-orthers{
+.input-image-orthers {
 	margin-top: 1rem;
 	display: flex;
 	justify-content: center;
-	
 }
 
-.input-image-orthers .input-image{
+.input-image-orthers .input-image {
 	margin: 0 0.5rem;
 }
 
@@ -28,33 +27,45 @@
 /*
  *  STYLE 2
  */
-
-.custom-scrollbar::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+.custom-scrollbar::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	border-radius: 10px;
 	background-color: #F5F5F5;
 }
 
-.custom-scrollbar::-webkit-scrollbar
-{
+.custom-scrollbar::-webkit-scrollbar {
 	width: 12px;
 	background-color: #F5F5F5;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb
-{
+.custom-scrollbar::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
 	background-color: #D62929;
 }
 
 /* Modal two column scroll independently */
 div#col-left, div#col-right {
-    max-height: 70vh;          /* not available in Bootstrap */
-    overflow-y: scroll;
+	max-height: 70vh; /* not available in Bootstrap */
+	overflow-y: scroll;
 }
 /* Product row view */
-.view-detail:hover{
+.view-detail:hover, .delete, .edit {
 	cursor: pointer;
+}
+
+/* Search bar  */
+.search-box {
+	width: 30rem;
+}
+
+/* Retail css */
+.product-area {
+	height: 70vh;
+	overflow-y: scroll;
+}
+.product-table-header{
+
+	background-color: #fff;
+	
 }
