--- a/HDTPharmacy/src/main/resources/templates/auth/employeeLogin.html
+++ b/HDTPharmacy/src/main/resources/templates/auth/employeeLogin.html
@@ -48,7 +48,7 @@
 										</div>
 										<div class="form-group">
 											<label class="font-weight-semibold" for="password">Mật khẩu:</label>
-											<a class="float-right font-size-13 text-muted" href="">Quên mật khẩu ?</a>
+											<a class="float-right font-size-13 text-muted" th:href="@{/forgot_password/employee}">Quên mật khẩu ?</a>
 											<div class="input-affix m-b-10">
 												<i class="prefix-icon anticon anticon-lock"></i> <input
 													type="password" class="form-control" name="password" id="password"
