--- a/HDTPharmacy/src/main/resources/templates/fragments/pagination_nav.html
+++ b/HDTPharmacy/src/main/resources/templates/fragments/pagination_nav.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+
+
 </head>
 <body>
-<nav th:fragment="paginator">
+	<nav th:fragment="paginator">
 
 		<ul class="pagination">
 			<li class="page-item"
 				th:class="${page.first ? 'page-item disabled' : 'page-item'}">
-				<span class="page-link" th:if="${page.first}" >Trang đầu</span>
-				<a class="page-link" th:if="${!page.first}"
-					th:href="@{${page.url}(page=0)}" >Trang đầu</a>
+				<span class="page-link" th:if="${page.first}">Trang đầu</span> <a
+				class="page-link" th:if="${!page.first}"
+				th:href="@{${page.url}(page=0)}">Trang đầu</a>
 			</li>
 			<li class="page-item"
 				th:class="${!page.hasPrevious ? 'page-item disabled' : 'page-item'}">
-				<span class="page-link" th:if="${!page.hasPrevious}" ><i class="fas fa-angle-left"></i></span>
-				<a class="page-link" th:if="${page.hasPrevious}"
-					th:href="@{${page.url}(page=${page.actualPage-2})}" ><i class="fas fa-angle-left"></i></a>
+				<span class="page-link" th:if="${!page.hasPrevious}"><i
+					class="fas fa-angle-left"></i></span> <a class="page-link"
+				th:if="${page.hasPrevious}"
+				th:href="@{${page.url}(page=${page.actualPage-2})}"><i
+					class="fas fa-angle-left"></i></a>
 			</li>
 			<li th:each="item : ${page.pages}" class="page-item"
-				th:class="${item.actual ? 'page-item active' : 'page-item'}">
-				<span class="page-link" th:if="${item.actual}"
-					th:text="${item.number}"></span>
+				th:class="${item.actual ? 'page-item active' : 'page-item'}"><span
+				class="page-link" th:if="${item.actual}" th:text="${item.number}"></span>
 				<a class="page-link" th:if="${!item.actual}"
-					th:text="${item.number}"
-					th:href="@{${page.url}(page=${item.number-1})}"></a>
-			</li>
+				th:text="${item.number}"
+				th:href="@{${page.url}(page=${item.number-1})}"></a></li>
 			<li class="page-item"
 				th:class="${!page.hasNext ? 'page-item disabled' : 'page-item'}">
-				<span class="page-link" th:if="${!page.hasNext}" ><i class="fas fa-angle-right"></i></span>
-				<a class="page-link" th:if="${page.hasNext}"
-					th:href="@{${page.url}(page=${page.actualPage})}" ><i class="fas fa-angle-right"></i></a>
+				<span class="page-link" th:if="${!page.hasNext}"><i
+					class="fas fa-angle-right"></i></span> <a class="page-link"
+				th:if="${page.hasNext}"
+				th:href="@{${page.url}(page=${page.actualPage})}"><i
+					class="fas fa-angle-right"></i></a>
 			</li>
 			<li class="page-item"
-				th:class="${page.last ? 'page-item disabled' : 'page-item'}">
-				<span class="page-link" th:if="${page.last}" >Trang cuối</span>
-				<a class="page-link" th:if="${!page.last}"
-					th:href="@{${page.url}(page=${page.totalPages-1})}" >Trang cuối</a>
+				th:class="${page.last ? 'page-item disabled' : 'page-item'}"><span
+				class="page-link" th:if="${page.last}">Trang cuối</span> <a
+				class="page-link" th:if="${!page.last}"
+				th:href="@{${page.url}(page=${page.totalPages-1})}">Trang cuối</a>
 			</li>
 		</ul>
 
